<resources>
  <string name="login_fragment_title">Login</string>
  <string name="main_fragment_title">Main</string>
  <string name="dig_site_fragment_title">Dig Site</string>
  <string name="fossil_gallery_fragment_title">Fossil Gallery</string>
  <string name="login_button_text">Log in with Google</string>
  <string name="play_game_button_text">Go to Digsite!</string>
  <string name="fossil_gallery_button_text">Fossil Gallery</string>
  <string name="settings_button_text">Settings</string>
  <string name="login_error_message">Sign-in failed. Please try again.</string>
  <string name="logout_button_text">Logout</string>
  <string name="fossil_view_dialog_title">Fossil Title</string>
  <string name="fossil_detail_title">Fossil Details</string>
  <string name="latin_name_label">Scientific Name</string>
  <string name="geological_era_label">Geological Era</string>
  <string name="unknown_fossil">Unknown Fossil</string>
  <string name="fossil_image_description">Fossil photograph</string>
  <string name="test_fossil_dialog_button_text">Test Fossil Dialog</string>
  <string name="board_width_pref_key">board_width_pref</string>
  <string name="board_height_pref_key">board_height_pref</string>
  <string name="board_width_pref_title">Dig Site Game Board Width</string>
  <string name="board_height_pref_title">Dig Site Game Board Height</string>
  <string name="board_width_pref_summary">Number of squares across in your digsite.</string>
  <string name="board_height_pref_summary">number of squares tall in your digsite</string>
  <string name="board_fossil_density_pref_key">board_fossil_density_pref</string>
  <string name="board_fossil_density_pref_title">Fossil Density</string>
  <string name="board_fossil_density_pref_summary">Percent of squares that have a fossil!</string>
  <string name="settings_fragment_title">Settings</string>
</resources>