<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/nav_graph"
  app:startDestination="@id/main_fragment">

  <fragment
    android:id="@+id/main_fragment"
    android:name="edu.cnm.deepdive.fossilsweeper.controller.MainFragment"
    android:label="@string/main_fragment_title"
    tools:layout="@layout/fragment_main">

    <action
      android:id="@+id/navigate_to_dig_site_fragment"
      app:destination="@id/dig_site_fragment" />

    <action
      android:id="@+id/navigate_to_fossil_gallery_fragment"
      app:destination="@id/fossil_gallery_fragment" />
  </fragment>

  <fragment
    android:id="@+id/dig_site_fragment"
    android:name="edu.cnm.deepdive.fossilsweeper.controller.DigSiteFragment"
    android:label="@string/dig_site_fragment_title"
    tools:layout="@layout/fragment_dig_site">

    <action
      android:id="@+id/navigate_to_main_fragment"
      app:destination="@id/main_fragment" />
  </fragment>

  <fragment
    android:id="@+id/fossil_gallery_fragment"
    android:name="edu.cnm.deepdive.fossilsweeper.controller.FossilGalleryFragment"
    android:label="@string/fossil_gallery_fragment_title"
    tools:layout="@layout/fragment_fossil_gallery">

    <action
      android:id="@+id/navigate_to_main_fragment"
      app:destination="@id/main_fragment" />
  </fragment>

</navigation>
