<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".controller.FossilViewDialogFragment"
  >

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/app_bar_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:elevation="4dp"
    >

    <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      app:navigationIcon="@android:drawable/ic_menu_close_clear_cancel"
      app:title="@string/fossil_detail_title"
      />

  </com.google.android.material.appbar.AppBarLayout>

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="@dimen/half_static_spacing"
      >

      <ImageView
        android:id="@+id/fossil_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/fossil_image_description"
        android:src="@drawable/main_logo"
        android:layout_marginBottom="@dimen/half_static_spacing"
        />

      <TextView
        android:id="@+id/latin_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latin_name_label"
        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
        android:layout_marginTop="@dimen/half_static_spacing"
        />

      <TextView
        android:id="@+id/latin_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        android:textStyle="italic"
        tools:text="Tyrannosaurus rex"
        android:layout_marginBottom="@dimen/half_static_spacing"
        />

      <TextView
        android:id="@+id/geological_era_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geological_era_label"
        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
        android:layout_marginTop="@dimen/half_static_spacing"
        />

      <TextView
        android:id="@+id/geological_era_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        tools:text="Late Cretaceous"
        android:layout_marginBottom="@dimen/half_static_spacing"
        />

    </LinearLayout>

  </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
